# HaploHyped-VarAwareML

./: .flake8  CHANGELOG.md  LICENSE  README.md  build.sh  check_paths.py  check_vcf.py  environment.yml  pyproject.toml  python_vers.py  requirements-dev.txt  requirements.txt  setup.py  setup.sh  updated_inits.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
cpp/: CMakeLists.txt  parse_vcf.cpp
docs/: ARCHITECTURE.md
examples/: 01_basic_pipeline.py  README.md  tutorial.ipynb
src/: __init__.py
src/dataloaders/: __init__.py
src/datasets/: __init__.py  haplotype_dataset.py
src/haplohyped/: fasta_encoder.py  main.py  vcf_to_h5.py
src/models/: __init__.py
src/training/: __init__.py
src/utils/: __init__.py  common_utils.py  fasta_encoder.py  h5_reader.py  vcf_to_h5.py
tests/: __init__.py  test_compression.py  test_integration.py  test_utils.py  test_vcf_to_h5.py  verify_h5.ipynb
tests/data/: README.md  chr22.fasta  ipscs_samples_test.txt  test_regions.bed
